Fix spacing of search bar and total reviews

--- a/client/components/Component.module.css
+++ b/client/components/Component.module.css
@@ -6,3 +6,9 @@
 hr{
   fill: #484848;
 }
+
+.totalAndSearch{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
